Remove :active to selection

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ h1 {
   text-align: center;
 }
 
-.board {
+#board {
   height: 700px;
   width: 700px;
   display: grid;
@@ -53,16 +53,24 @@ h1 {
 }
 
 .cell-item {
-  size: 95%;
   background-color: white;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+.cell-item>img{
+  width: 60%;
+}
+
 
 #player-selection{
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 50%;
+  margin: 10px 0px;
 }
 
 #player-selection>div{
@@ -70,12 +78,19 @@ h1 {
   flex-direction: column;
 }
 
-#select{
+.select{
+  width: 100px;
   padding: 15px 10px;
+  border-radius: 10px;
+  box-shadow: 3px 3px 5px gray;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-#select>img{
-  width: 1rem;
+.select>img{
+  width: 2rem;
 }
 
 @media (prefers-color-scheme: light) {
