--- a/style.css
+++ b/style.css
@@ -105,3 +105,17 @@ h1 {
     background-color: #f9f9f9;
   }
 }
+
+
+#set-player-card{
+  width: 300px;
+  height: 400px;
+  position: absolute;
+  top:calc(50% - 150px);
+  left: calc(50% - 200px);
+  float: left;
+  background-color: white;
+  box-shadow: 3px 3px 5px gray;
+  border-radius: 10px;
+  padding: 15px 10px;
+}
